[metadata]
name    = vulyk
version = attr: src.VERSION

description      = Crowdsourcing platform for different kinds of tasks
long_description = file: README.rst, HISTORY.rst
url              = https://github.com/mrgambal/vulyk

author       = Dmytro Hambal
author_email = mr_hambal@outlook.com

license    = BSD 3-Clause License
keywords   = collaboration, flask, crowdsourcing, python, python3
classifiers =
        Development Status :: 3 - Alpha
        Intended Audience :: Developers
        License :: OSI Approved :: BSD License
        Natural Language :: English
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7

[options]
zip_safe             = False
include_package_data = True

[wheel]
universal = 1
